trino/trino-http-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: ganesh-trino-cluster-trino
  namespace: trino
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: contour
    namespace: projectcontour
  hostnames:
  - "trino.ganesh.algueron.io"
  rules:
  - backendRefs:
    - kind: Service
      name: ganesh-trino-cluster-trino
      port: 8080
